--- a/public/static/assets/sass/main.scss
+++ b/public/static/assets/sass/main.scss
@@ -25,6 +25,7 @@
 	));
 
 $linkedInBlue: #007bb5;
+$githubPurp: #8f01fbe8;
 
 // Reset.
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
@@ -1027,6 +1028,10 @@ $linkedInBlue: #007bb5;
 
 			&#linkedin-part:hover {
 				color: $linkedInBlue;
+			}
+
+			&#github-part:hover {
+				color: $githubPurp;
 			}
 
 			&:hover {
